--- a/src/app/upgrade-transfer/upgrade-transfer.component.html
+++ b/src/app/upgrade-transfer/upgrade-transfer.component.html
@@ -6,7 +6,7 @@
     <div class="d-flex mt-4 align-items-center mb-4 gap-1">
       <h4 class="fw-bold">Upgrade Transfer</h4>
       <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#walletTransferModal">
-        <i class="fa-solid fa-money-bill-transfer"></i> Upgrade Transfer
+        <i class="fa-solid fa-money-bill-transfer"></i>  Transfer Holding Funds
       </button>
     </div>
   
@@ -79,9 +79,14 @@
               {{ errorMessage }}
             </div>
    
-            <input type="text" class="form-control mb-2" placeholder="Enter Amount" formControlName="amount"
-              style="border-radius: 16px; font-size: 25px;" />
-  
+            <input type="text" 
+            class="form-control mb-2" 
+            placeholder="Enter Amount" 
+            formControlName="amount"
+            style="border-radius: 16px; font-size: 25px;" 
+            (input)="formatAmount($event)" />
+     
+
         
             <p class=" fw-bold "> Balance: <span >{{pffdata.upgrade |
                 currency:'USD':true:'1.0-2'}}</span></p>
