--- a/src/app/tree-registration/tree-registration.component.html
+++ b/src/app/tree-registration/tree-registration.component.html
@@ -5,109 +5,128 @@
              <img src="assets/usd.jpeg" style="width: 80px; height: 80px;" alt="" srcset="">
            </div> -->
           <h5 class="text-center mb-4 fw-bold text-success">REGISTER</h5>
+          
           <form [formGroup]="registerForm" (ngSubmit)="sign()">
             <div class="row g-3">
+              <!-- Full Name -->
               <div class="col-sm-6">
                 <label class="form-label">Full Name</label>
                 <div class="input-wrapper">
                   <i class="fas fa-user input-icon"></i>
-                  <input type="text" formControlName="name" placeholder="Enter Name" class="form-control" required>
+                  <input type="text" formControlName="name" placeholder="Enter Name" class="form-control" />
+                </div>
+                <div *ngIf="registerForm.get('name')?.touched && registerForm.get('name')?.invalid" class="text-danger small">
+                  Name is required
                 </div>
               </div>
+          
+              <!-- Email -->
               <div class="col-sm-6">
                 <label class="form-label">Email</label>
                 <div class="input-wrapper">
                   <i class="fas fa-envelope input-icon"></i>
-                  <input type="email" formControlName="email" placeholder="example@domain.com" class="form-control"
-                    required>
+                  <input type="email" formControlName="email" placeholder="example@domain.com" class="form-control" />
+                </div>
+                <div *ngIf="registerForm.get('email')?.touched && registerForm.get('email')?.invalid" class="text-danger small">
+                  <span *ngIf="registerForm.get('email')?.errors?.['required']">Email is required</span>
+                  <span *ngIf="registerForm.get('email')?.errors?.['email']">Invalid email format</span>
                 </div>
               </div>
+          
+              <!-- Country -->
               <div class="col-sm-6">
                 <label class="form-label">Country</label>
                 <div class="input-wrapper">
                   <i class="fas fa-globe input-icon"></i>
-                  <select formControlName="country" class="form-select" required>
+                  <select formControlName="country" class="form-select">
                     <option value="" disabled selected>Select your country</option>
                     <option *ngFor="let country of countries" [value]="country">{{ country }}</option>
                   </select>
                 </div>
+                <div *ngIf="registerForm.get('country')?.touched && registerForm.get('country')?.invalid" class="text-danger small">
+                  Country is required
+                </div>
               </div>
-
-            <div class="col-sm-6">
+          
+              <!-- Phone -->
+              <div class="col-sm-6">
                 <label class="form-label">Phone</label>
-                <div class="input-wrapper d-flex align-items-center"  [ngClass]="{ 'has-code': numbercode }">                  
+                <div class="input-wrapper d-flex align-items-center" [ngClass]="{ 'has-code': numbercode }">
                   <span *ngIf="numbercode; else phoneIcon" class="input-icon">
                     {{ numbercode }}
                   </span>
                   <ng-template #phoneIcon>
                     <i class="fa-solid fa-phone input-icon"></i>
                   </ng-template>
-                  <input type="number" formControlName="phone"  placeholder="Phone number" 
-                    class="form-control flex-grow-1" required>
+                  <input type="number" formControlName="phone" placeholder="Phone number" class="form-control flex-grow-1" />
+                </div>
+                <div *ngIf="registerForm.get('phone')?.touched && registerForm.get('phone')?.invalid" class="text-danger small">
+                  Phone is required
                 </div>
               </div>
-
+          
+              <!-- Password -->
               <div class="col-sm-6">
                 <label class="form-label">Password</label>
                 <div class="input-wrapper">
                   <i class="fas fa-lock input-icon"></i>
-                  <input type="password" formControlName="password" placeholder="********" class="form-control"
-                    required>
+                  <input type="password" formControlName="password" placeholder="********" class="form-control" />
+                </div>
+                <div *ngIf="registerForm.get('password')?.touched && registerForm.get('password')?.invalid" class="text-danger small">
+                  <span *ngIf="registerForm.get('password')?.errors?.['required']">Password is required</span>
+                  <span *ngIf="registerForm.get('password')?.errors?.['minlength']">
+                    Password must be at least 6 characters
+                  </span>
                 </div>
               </div>
-              <!-- ✅ Referral ID -->
+          
+              <!-- Referral ID -->
               <div class="col-sm-6">
                 <label class="form-label">Referral ID</label>
                 <div class="input-wrapper">
                   <i class="fas fa-key input-icon"></i>
-                  <input type="text" formControlName="sponcerid"  placeholder="Enter referral ID" class="form-control" [(ngModel)]="hpdata.regid" readonly>
+                  <input type="text" formControlName="sponcerid" class="form-control" [(ngModel)]="hpdata.regid" readonly />
                 </div>
                 <small class="text-success">Referral Name: {{ hpdata.name }}</small>
-
               </div>
-
-              <!-- placementid -->
+          
+              <!-- Placement ID -->
               <div class="col-sm-6">
                 <label class="form-label">Placement ID</label>
                 <div class="input-wrapper">
                   <i class="fas fa-key input-icon"></i>
-                  <input type="text" formControlName="placementid" [(ngModel)]="this.regid"
-                    placeholder="Enter placement ID" class="form-control" readonly>
+                  <input type="text" formControlName="placementid" [(ngModel)]="this.regid" class="form-control" readonly />
                 </div>
                 <div class="text-success mt-1">
                   Placement Name: {{ pffdata.name }}
                 </div>
-
-                <!-- <ng-template #noData>
-                  <p class="text-danger">
-                    {{ errorMessage || 'No registration data available.' }}
-                  </p>
-                </ng-template> -->
               </div>
+          
+              <!-- Position -->
               <div class="col-sm-6">
                 <label class="form-label">Position</label>
                 <div class="input-wrapper">
                   <i class="fa-solid fa-left-right input-icon"></i>
-                  <input formControlName="position" class="form-control" [(ngModel)]="this.position" readonly>
+                  <input formControlName="position" class="form-control" [(ngModel)]="this.position" readonly />
                 </div>
               </div>
             </div>
-       
-
+          
+            <!-- Terms -->
             <div class="mt-3">
               <label>
-                <input type="checkbox" formControlName="terms" required />
-                I have read and agree to <a href="#" data-bs-toggle="modal" data-bs-target="#termsModal">Terms & Conditions</a>
+                <input type="checkbox" formControlName="terms" />
+                I have read and agree to
+                <a href="#" data-bs-toggle="modal" data-bs-target="#termsModal">Terms & Conditions</a>
               </label>
+              <div *ngIf="registerForm.get('terms')?.touched && registerForm.get('terms')?.invalid" class="text-danger small">
+                You must accept the terms
+              </div>
             </div>
-
+          
             <button type="submit" class="btn btn-dark w-100 mt-3 rounded-pill">Sign Up</button>
-            <!-- ajdds -->
-
-            <!-- <div class="text-center mt-3">
-              Already have an account? <a routerLink="/login" class="text-primary">Log In</a>
-            </div> -->
           </form>
+          
         </div>
     </div>
 </div>
