--- a/src/app/withdraw/withdraw.component.html
+++ b/src/app/withdraw/withdraw.component.html
@@ -60,7 +60,8 @@
   <form [formGroup]="withdrawForm" (ngSubmit)="withdraw()">
     <div class="mb-2">
       <label for="amount">Amount (USD)</label>
-      <input
+
+      <!-- <input
         id="amount"
         type="number"
         formControlName="amount"
@@ -68,7 +69,17 @@
         min="5"
         step="0.01"
         placeholder="Enter amount (min $5)"
-      />
+      /> -->
+      <input
+  id="amount"
+  type="text"
+  formControlName="amount"
+  class="form-control"
+  min="5"
+  placeholder="Enter amount (min $5)"
+  (input)="formatAmount($event)"
+/>
+
     </div>
 
     <div class="mb-2">
