--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -191,6 +191,7 @@
   formControlName="amount"
   (input)="formatAmount($event, 'form1')"
   style="border-radius: 16px; font-size: 25px;" />
+  <!-- shdvajsygv -->
 
    
           <p class=" fw-bold "> Balance: <span >{{pffdata.actwallet |
