--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -75,11 +75,18 @@
     [errorCorrectionLevel]="'M'">
   </qrcode>
 
-    <div class="mt-3">
+    <!-- <div class="mt-3">
     <button class="btn btn-success me-2" (click)="shareOnWhatsApp()">
       Share on WhatsApp
     </button>
+  </div> -->
+<div *ngIf="alertMessage" class="mt-3">
+  <div class="alert alert-{{alertType}} alert-dismissible fade show" role="alert">
+    {{ alertMessage }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"
+      (click)="alertMessage = ''"></button>
   </div>
+</div>
 
 
   <button (click)="checkPaymentStatus()" [disabled]="checkingStatus" class="btn btn-success mt-2">
