--- a/src/app/auth-refer-share/auth-refer-share.component.html
+++ b/src/app/auth-refer-share/auth-refer-share.component.html
@@ -55,7 +55,7 @@
               </div>
           
               <!-- Phone -->
-              <div class="col-sm-6">
+              <!-- <div class="col-sm-6">
                 <label class="form-label">Phone</label>
                 <div class="input-wrapper d-flex align-items-center" [ngClass]="{ 'has-code': numbercode }">
                   <span *ngIf="numbercode; else phoneIcon" class="input-icon">
@@ -69,7 +69,7 @@
                 <div *ngIf="registerForm.get('phone')?.touched && registerForm.get('phone')?.invalid" class="text-danger small">
                   Phone is required
                 </div>
-              </div>
+              </div> -->
           
               <!-- Password -->
               <div class="col-sm-6">
