--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -61,7 +61,7 @@
               </div>
           
               <!-- Phone -->
-              <div class="col-sm-6">
+              <!-- <div class="col-sm-6">
                 <label class="form-label">Phone</label>
                 <div class="input-wrapper d-flex align-items-center" [ngClass]="{ 'has-code': numbercode }">                  
                   <span *ngIf="numbercode; else phoneIcon" class="input-icon">
@@ -76,7 +76,7 @@
                   <div *ngIf="registerForm.get('phone')?.errors?.['required']">Phone number is required.</div>
                   <div *ngIf="registerForm.get('phone')?.errors?.['pattern']">Enter a valid phone number (10–15 digits).</div>
                 </div>
-              </div>
+              </div> -->
           
               <!-- Password -->
               <div class="col-sm-6">
